adapted styling for footer to fix gap issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,8 +218,8 @@ footer li {
 
 .socials {
     color: #dfe0df;
-    margin: 10px;
-    padding-top: 30px;
+    margin: 0;
+    padding-top: 35px;
 }
 
 .socials i {
